Fix Overflow Overwrite From Previous Commit - Oops

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 html {
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 
 body {
   width: 1080px;
   height: 1920px;
   background: url('../images/background.jpg') no-repeat;
-  /*overflow: hidden;*/
+  overflow: hidden;
 }
 
 #instagramimages {
